--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-interactive": "^1.1.2",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
